tests/trybuild/schedule/non_send_views.stderr
error[E0277]: `Rc<A>` cannot be shared between threads safely
  --> tests/trybuild/schedule/non_send_views.rs:30:24
   |
30 |     world.run_schedule(&mut schedule);
   |           ------------ ^^^^^^^^^^^^^ `Rc<A>` cannot be shared between threads safely
   |           |
   |           required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `Rc<A>`
   = note: required for `&Rc<A>` to implement `Send`
   = note: required because it appears within the type `(&Rc<A>, brood::query::view::Null)`
   = note: required for `(schedule::stage::Stage<Foo, system::private::Null>, brood::hlist::Null)` to implement `schedule::stage::Sealed<'_, (Rc<A>, brood::registry::Null), brood::resource::Null, ((registry::contains::Null, (registry::contains::Contained, registry::contains::Null), (registry::contains::NotContained, (&registry::contains::Contained, registry::contains::Null)), (brood::hlist::get::Index, registry::contains::Null), (brood::hlist::get::Index, brood::hlist::Null)), (resource::contains::Null, resource::contains::Null, resource::contains::Null, resource::contains::Null), (((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null, ((registry::contains::NotContained, (&registry::contains::Contained, registry::contains::Null)), (brood::hlist::get::Index, registry::contains::Null), (brood::hlist::get::Index, brood::hlist::Null)), view::disjoint::Null), ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), (registry::contains::Null, registry::contains::Null, (registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), (resource::contains::Null, resource::contains::Null, resource::contains::Null, resource::contains::Null), (((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null, ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null), ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), brood::hlist::Null)>`
   = note: required for `(schedule::stage::Stage<Foo, system::private::Null>, brood::hlist::Null)` to implement `Stages<'_, (Rc<A>, brood::registry::Null), brood::resource::Null, ((registry::contains::Null, (registry::contains::Contained, registry::contains::Null), (registry::contains::NotContained, (&registry::contains::Contained, registry::contains::Null)), (brood::hlist::get::Index, registry::contains::Null), (brood::hlist::get::Index, brood::hlist::Null)), (resource::contains::Null, resource::contains::Null, resource::contains::Null, resource::contains::Null), (((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null, ((registry::contains::NotContained, (&registry::contains::Contained, registry::contains::Null)), (brood::hlist::get::Index, registry::contains::Null), (brood::hlist::get::Index, brood::hlist::Null)), view::disjoint::Null), ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), (registry::contains::Null, registry::contains::Null, (registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), (resource::contains::Null, resource::contains::Null, resource::contains::Null, resource::contains::Null), (((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null, ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), view::disjoint::Null), ((registry::contains::NotContained, (registry::contains::NotContained, registry::contains::Null)), registry::contains::Null, brood::hlist::Null), brood::hlist::Null)>`
note: required by a bound in `World::<Registry, Resources>::run_schedule`
  --> src/world/mod.rs
   |
   |         Stages: self::Stages<'a, Registry, Resources, Indices>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `World::<Registry, Resources>::run_schedule`
